更新配置文件

--- a/springcloud_member/springcloud_member_service_impl/pom.xml
+++ b/springcloud_member/springcloud_member_service_impl/pom.xml
@@ -17,5 +17,15 @@
             <artifactId>springcloud_member_service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--config-client-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
+        <!-- actuator监控中心 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 </project>
