--- a/springcloud_order/springcloud_order_service_impl/src/main/resources/application.yml
+++ b/springcloud_order/springcloud_order_service_impl/src/main/resources/application.yml
@@ -38,3 +38,10 @@ hystrix:
             timeoutInMilliseconds: 5000
 #        timeout:
 #          enabled: false
+
+logging:
+  level:
+    root: INFO
+    com.ashun: DEBUG
+
+
