--- a/springcloud_parent/pom.xml
+++ b/springcloud_parent/pom.xml
@@ -31,6 +31,15 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
+
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.17.2</version>
+      <scope>compile</scope>
+    </dependency>
+
     <!-- SpringBoot整合Web组件 -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -50,6 +59,12 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <version>5.2.9.RELEASE</version>
     </dependency>
 
     <!-- hystrix断路器 -->
