--- a/springcloud_order/pom.xml
+++ b/springcloud_order/pom.xml
@@ -32,5 +32,12 @@
             <artifactId>springcloud_member_service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.15</version>
+        </dependency>
+
     </dependencies>
 </project>
