--- a/springcloud_parent/pom.xml
+++ b/springcloud_parent/pom.xml
@@ -32,6 +32,17 @@
   </dependencyManagement>
   <dependencies>
 
+    <dependency>
+
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-boot-starter</artifactId>
+      <version>3.4.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
@@ -61,11 +72,11 @@
       <artifactId>lombok</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-tx</artifactId>
-      <version>5.2.9.RELEASE</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.springframework</groupId>-->
+<!--      <artifactId>spring-tx</artifactId>-->
+<!--      <version>5.3.31</version>-->
+<!--    </dependency>-->
 
     <!-- hystrix断路器 -->
     <dependency>
