--- a/springcloud_order/springcloud_order_service_impl/src/main/resources/application.yml
+++ b/springcloud_order/springcloud_order_service_impl/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   ##数据源
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/obei_store_logistics?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/obei_store_logistics?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
     password: root
 ###服务注册到eureka地址
