--- a/springCloud_other/pom.xml
+++ b/springCloud_other/pom.xml
@@ -3,19 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>springcloud_order</artifactId>
+        <artifactId>springcloud_parent</artifactId>
         <groupId>com.ashun</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../springcloud_parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <modules>
+        <module>springcloud_other_service</module>
+        <module>springcloud_other_service_impl</module>
+    </modules>
+    <artifactId>springcloud_other</artifactId>
 
-    <artifactId>springcloud_order_service_impl</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <groupId>com.ashun</groupId>
+            <artifactId>springcloud_common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
-
 </project>
