--- a/springCloud_other/springcloud_other_service/pom.xml
+++ b/springCloud_other/springcloud_other_service/pom.xml
@@ -3,19 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>springcloud_order</artifactId>
+        <artifactId>springcloud_other</artifactId>
         <groupId>com.ashun</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>springcloud_order_service_impl</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-    </dependencies>
+    <packaging>jar</packaging>
+    <artifactId>springcloud_other_service</artifactId>
 
 
 </project>
