--- a/springcloud_parent/pom.xml
+++ b/springcloud_parent/pom.xml
@@ -7,6 +7,7 @@
   <modules>
     <module>../springcloud_member</module>
     <module>../springcloud_order</module>
+    <module>../springcloud_other</module>
       <module>../springcloud_common</module>
   </modules>
   <groupId>com.ashun</groupId>
